hphp/hack/test/typecheck/reactive/mutable_as_hint5.php.like_types.exp
File "mutable_as_hint5.php", line 13, characters 18-19:
Variable $z is undefined, not always defined, or unset afterwards (did you mean $a instead?) (Naming[2050])
